<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:layout_marginTop="?android:attr/actionBarSize">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/layout_default"
                android:layout_weight="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/pergunta"/>
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/resp_primaria">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sim"
                        android:layout_weight="1"
                        android:id="@+id/sim"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nao"
                        android:layout_weight="1"
                        android:id="@+id/nao"/>
                </RadioGroup>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/perg_intensidade"
                    android:id="@+id/pergunta_secundaria"
                    android:visibility="gone"/>
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/resp_secundaria"
                    android:visibility="gone">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/resp_muito"
                        android:layout_weight="1"
                        android:id="@+id/muito"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/resp_pouco"
                        android:layout_weight="1"
                        android:id="@+id/pouco"/>
                </RadioGroup>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pergunta_pneus"
                    android:id="@+id/pergunta_pneus"/>
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/resp_pneus">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sim"
                        android:layout_weight="1"
                        android:id="@+id/simP"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nao"
                        android:layout_weight="1"
                        android:id="@+id/naoP"/>
                </RadioGroup>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layout_dicas"
                android:orientation="vertical"></LinearLayout>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/imagem"
                android:adjustViewBounds="true"/>
        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            style="@style/ButtonStyle"
            android:id="@+id/botaoAnt"
            android:text="@string/btn_anterior"/>
        <Button
            style="@style/ButtonStyle"
            android:id="@+id/botaoProx"
            android:text="@string/btn_prox"
            android:layout_gravity="right"/>
        <Button
            style="@style/ButtonStyle"
            android:id="@+id/botaoFinalizar"
            android:text="@string/btn_finalizar"
            android:layout_gravity="right"
            android:visibility="gone"/>
    </FrameLayout>

</LinearLayout>