<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.raissa.analiseapp.PictureActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/tirar_foto"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:id="@+id/foto"/>
        <Button
            style="@style/ButtonStyle"
            android:layout_gravity="center_horizontal"
            android:text="@string/btn_tirar_foto"
            android:id="@+id/btn_tirar_foto"/>
        <!--Button
            style="@style/ButtonStyle"
            android:layout_gravity="center_horizontal"
            android:text="@string/btn_finalizar"
            android:id="@+id/btn_finalizar"
            android:visibility="gone"/-->
        <!--LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                style="@style/ButtonStyle"
                android:id="@+id/btn_enviar"
                android:layout_weight="1"
                android:text="@string/btn_enviar"
                />
            <Button
                style="@style/ButtonStyle"
                android:id="@+id/btn_salvar"
                android:layout_weight="1"
                android:text="@string/btn_salvar"
                />
        </LinearLayout-->
        <Button
            style="@style/ButtonStyle"
            android:id="@+id/btn_enviar"
            android:layout_gravity="center"
            android:text="@string/btn_enviar"
            android:visibility="gone"
            />

    </LinearLayout>



</LinearLayout>
